# RG_project

./: CMakeLists.txt  README.md  main.cpp
include/: stb_image.h
include/classes_impl/: Camera.h  Mesh.h  Model.h  Shader.h  model.h
resources/objects/ak47/: AK47.FBX  AK47.mtl
resources/objects/bullet/: bullet.mtl
resources/objects/green_swat/: green swat.mtl
resources/shaders/: fragment_Shader.fs  kocka.fs  kocka.vs  light_cube.fs  model_ranac.fs  prostorija.fs  prostorija.vs  swat.fs  vertex_Shader.vs
